crates/schema/tests/compile_fail/derive_secret_with_default.stderr
error: `#[param(default = ..)]` on a secret field hard-codes plaintext into the schema; configure the value via the credential setup form instead
 --> tests/compile_fail/derive_secret_with_default.rs:7:5
  |
7 |     api_key: String,
  |     ^^^^^^^

error[E0599]: no function or associated item named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_secret_with_default.rs:11:18
   |
 5 | struct Bad {
   | ---------- function or associated item `schema` not found for this struct
...
11 |     let _ = Bad::schema();
   |                  ^^^^^^ function or associated item not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
